# cloudy

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
main/: models.py  serializers.py  services.py  urls.py  views.py
main/migrations/: 0001_initial.py
root/: asgi.py  settings.py  urls.py
templates/: weather.html
