[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.0",
    "django>=6.0",
    "django-celery-beat>=2.1.0",
    "django-crontab>=0.7.1",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
]
